Add an add-company form and handle creating a Company object and adding it to UI

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <body>
     <h1>Job Crawler</h1>
 
+    <form action="" class="add-company">
+        <h2 class="add-company-title">Add a company</h2>
+        <label for="company-name">Company name</label>
+        <input type="text" id="company-name">
+        <label for="company-url">Company URL</label>
+        <input type="text" id="company-url">
+        <input type="submit" value="Add">
+    </form>
+
     <ul class="companies-list"></ul>
 
     <script src="index.js"></script>
