Add clearFields trigger

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <form action="" class="add-company">
         <h2 class="add-company-title">Add a company</h2>
         <label for="company-name">Company name</label>
-        <input type="text" id="company-name">
+        <input type="text" id="company-name" required>
         <label for="company-url">Company URL</label>
-        <input type="text" id="company-url">
+        <input type="text" id="company-url" required>
         <input type="submit" value="Add">
     </form>
 
