Add JSON file input

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <input type="submit" value="Add">
     </form>
 
+    <form action="">
+        <input type="file" id="input">
+    </form>
+
     <ul class="companies-list"></ul>
 
     <script src="index.js"></script>
