Add matching companies list to UI and separate UI elements

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <input type="file" id="input">
     </form>
 
+    <h2 class="list-label">Matching companies list</h2>
+    <ul class="matching-companies-list"></ul>
+
+    <h2 class="list-label">Companies database</h2>
     <ul class="companies-list"></ul>
 
     <script src="index.js"></script>
